--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "aws-cdk": "2.41.0",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
