--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
+    "aws-sdk": "^2.1211.0",
     "esbuild": "^0.15.7",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
